--- a/about.css
+++ b/about.css
@@ -47,9 +47,10 @@ a {
 h2 {
   font-family: 'Poppins', sans-serif;
    font-weight: 700;
-   font-size: 30pt;
-   line-height: 32pt;
+   font-size: 15pt;
+   line-height: 17pt;
    margin-bottom: 20px;
+   color: #082b59;
  }
  
  h1 {
@@ -61,18 +62,19 @@ h2 {
  
  h3 {
   font-family: 'Poppins', sans-serif;
-   font-weight: 400;
-   font-size: 13pt;
-   line-height: 17pt;
-   color: #082b59;;
+    font-weight: 400;
+    font-size: 13pt;
+    line-height: 17pt;
+    color: #f58544;
  }
  
  h4 {
   font-family: 'Poppins', sans-serif;
-   font-weight: 700;
-   font-size: 10pt;
-   line-height: 12pt;
-   margin: 0;
+  font-weight: 400;
+  font-size: 13pt;
+  line-height: 12pt;
+  margin: 0;
+  color: #082b59;;
  }
 
 a {
@@ -91,20 +93,22 @@ a {
 
 
 .button {
- margin-top: 20px;
- margin-bottom: 20px;
- align-items: center;
- text-align: center;
- width: 150px;
- border-radius: 10px;
- border: solid 2px #f58544 
-}
-
-.button:hover {
-  background-color: #f58544; /* Change background color on hover */
-color: white; /* Change text color on hover */
-opacity: 0.8;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  align-items: center;
+  text-align: center;
+  width: 150px;
+  padding: 10px;
+  border-radius: 10px;
+  border: solid 2px #f58544 
  }
+
+ .button:hover {
+  background-color: #f58544; /* Change background color on hover */
+ color: white; /* Change text color on hover */
+ opacity: 0.8;
+  }
+ 
 
 .footer {
  margin-top: 0;
@@ -120,37 +124,22 @@ opacity: 0.8;
   display: inline-block;
 }
 
-.overlay-text {
-  position: absolute;
-  top: 50%;
-  left: 30%;
-  transform: translate(-50%, -50%);
-  text-align: left;
-  color: white;
-  width: 40%;
-  background-color: #082b59bc;
-  padding-right: 20px;
-  padding-left: 20px;
-  border-radius: 20px;
-
-}
-
-.overlay-text h2,
-.overlay-text h3 {
-  margin-bottom: 10px;
-}
-
 .image {
-  display: block;
   width: 100%;
   height: auto;
-  opacity: 80%;
+  background-color: #59331d;
+  text-align: center;
+  border-radius: 15px;
 }
 
-.image3 {
+.image img {
+  border-radius: 10px;
+}
+
+
+.image-container img {
   width: 100vw;
   height: auto;
-  margin-bottom: 0;
 }
 
 /* Add styles for the underline */
@@ -166,62 +155,3 @@ opacity: 0.8;
   width: 100%;
 }
 
-
-.menu-toggle {
-  display: none; /* Initially hide the menu toggle */
-}
-
-/* Adjustments for smaller screens */
-@media only screen and (max-width: 768px) {
-  .nav-bar {
-    display: none; /* Hide the navbar by default on smaller screens */
-    flex-direction: column; /* Change flex direction to stack items vertically */
-    align-items: center; /* Center items horizontally */
-    padding-top: 20px; /* Add some top padding */
-  }
-
-  .nav-bar.show {
-    display: flex; /* Show the navbar when .show class is applied */
-  }
-
-  .menu-toggle {
-    display: block; /* Show the menu toggle on smaller screens */
-    cursor: pointer;
-  }
-
-  /* Styles for the hamburger icon */
-  .menu-toggle i {
-    font-size: 20px;
-  }
-}
-
-
-/* Add responsive styles */
-@media only screen and (max-width: 768px) {
-
-  .header {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .main-content {
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  .image-container {
-    width: 100%;
-  }
-
-  .overlay-text {
-    width: 80%;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 20px;
-    text-align: center;
-  }
-
-  .button {
-    width: 100%;
-  }
-}
