--- a/about.css
+++ b/about.css
@@ -165,3 +165,124 @@ a {
   width: 100%;
 }
 
+@media (max-width: 900px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .logo img {
+    margin-left: 0;
+    width: 150px;
+  }
+
+  .nav-bar {
+    margin-top: 1em;
+    flex-direction: row;
+    gap: 30pt;
+    margin-right: 0;
+  }
+
+  h2 {   
+     font-size: 12pt;
+     line-height: 10pt;
+   }
+   
+   h1 {
+     font-size: 8pt;
+     line-height: 10pt;
+   }
+   
+   h3 { 
+     font-size: 10pt;
+     line-height: 10pt;
+   }
+ 
+   h5 {
+      font-size: 8pt;
+      line-height: 10pt;
+    }
+   
+   h4 {
+     font-size: 8pt;
+     line-height: 10pt;
+   }
+
+  .button {
+    width: 130px; /* Adjust button size for smaller screens */
+  }
+
+  .footer {
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
+
+  .main-content {
+    flex-direction: row;
+    margin-left: 1em;
+    margin-right: 1em;
+    gap: 50px;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
+}
+
+@media (max-width: 480px) {
+  .logo img {
+    width: 100px; /* Further reduce logo size for very small screens */
+  }
+
+  .nav-bar {
+    gap: 15pt;
+  }
+
+  h2 {   
+    font-size: 12pt;
+    line-height: 10pt;
+  }
+  
+  h1 {
+    font-size: 8pt;
+    line-height: 10pt;
+  }
+  
+  h3 { 
+    font-size: 10pt;
+    line-height: 10pt;
+  }
+
+  h5 {
+     font-size: 8pt;
+     line-height: 10pt;
+   }
+  
+  h4 {
+    font-size: 8pt;
+    line-height: 10pt;
+  }
+
+   .button {
+    margin-left: 1em;
+    margin-right: 1em;
+    width: auto; 
+    margin-bottom: 10px;
+    text-align: center;
+  }
+
+  .image2 {
+    margin-bottom: 1em;
+  }
+
+  .main-content {
+    flex-direction: column;
+    margin-left: 1em;
+    margin-right: 1em;
+    gap: 10px;
+    margin-top: 1em;
+    text-align: center;
+    margin-bottom: 1em;
+  }
+
+}
+
