--- a/style.css
+++ b/style.css
@@ -263,8 +263,8 @@ body {
     }
   
     h2 {   
-      font-size: 14pt;
-      line-height: 16pt;
+      font-size: 12pt;
+      line-height: 14pt;
     }
     
     h1 {
@@ -300,6 +300,7 @@ body {
       flex-direction: column;
       margin-left: 1em;
       margin-right: 1em;
+      margin-top: 1em;
       width: auto; 
       margin-bottom: 10px;
       text-align: center;/* Adjust layouts and sizes to better fit very small screens */
@@ -316,7 +317,7 @@ body {
 
     .image-container .overlay-text {
       left: 50%;
-      width: 40%;
+      width: 50%;
       text-align: center
     ; /* Adjust overlay text box for narrower screens */
     }
