--- a/about.css
+++ b/about.css
@@ -108,12 +108,14 @@ a {
   width: 150px;
   padding: 10px;
   border-radius: 10px;
-  border: solid 2px #f58544 
+  border: solid 2px #f58544;
+  opacity: 1;
+  transition: 0.3s; 
  }
 
  .button:hover {
-  background-color: #f58544; /* Change background color on hover */
- color: white; /* Change text color on hover */
+  background-color: #f58544; 
+ color: white; 
  opacity: 0.8;
   }
  
@@ -152,15 +154,14 @@ a {
   height: auto;
 }
 
-/* Add styles for the underline */
+
 .underline {
   width: 0;
   height: 2px;
   background-color: #f58544;
-  transition: width 0.3s; /* Add transition for smoother effect */
+  transition: width 0.3s; 
 }
 
-/* Style for active underline */
 .underline.active {
   width: 100%;
 }
@@ -194,8 +195,8 @@ a {
    }
    
    h3 { 
-     font-size: 10pt;
-     line-height: 10pt;
+     font-size: 12pt;
+     line-height: 14pt;
    }
  
    h5 {
@@ -209,7 +210,7 @@ a {
    }
 
   .button {
-    width: 130px; /* Adjust button size for smaller screens */
+    width: 130px; 
   }
 
   .footer {
@@ -230,7 +231,7 @@ a {
 
 @media (max-width: 480px) {
   .logo img {
-    width: 100px; /* Further reduce logo size for very small screens */
+    width: 100px; 
   }
 
   .nav-bar {
