--- a/style.css
+++ b/style.css
@@ -104,11 +104,13 @@ body {
    padding: 10px;
    border-radius: 10px;
    border: solid 2px #f58544; 
+   opacity: 1;
+  transition: 0.3s;
   }
 
   .button:hover {
-    background-color: #f58544; /* Change background color on hover */
-  color: white; /* Change text color on hover */
+    background-color: #f58544; 
+  color: white; 
   opacity: 0.8;
    }
   
@@ -171,15 +173,15 @@ body {
     margin-bottom: 0;
   }
 
-  /* Add styles for the underline */
+
 .underline {
     width: 0;
     height: 2px;
     background-color: #f58544;
-    transition: width 0.3s; /* Add transition for smoother effect */
+    transition: width 0.3s; 
   }
   
-  /* Style for active underline */
+  
   .underline.active {
     width: 100%;
   }
@@ -204,7 +206,7 @@ body {
   
     .main-content {
       flex-direction: row;
-      margin-left: 2em;
+      margin-left: 3em;
       margin-right: 2em;
       gap: 20px;
   
@@ -221,7 +223,7 @@ body {
      }
      
      h3 { 
-       font-size: 8pt;
+       font-size: 10pt;
        line-height: 10pt;
      }
    
@@ -231,16 +233,16 @@ body {
       }
      
      h4 {
-       font-size: 8pt;
-       line-height: 10pt;
+       font-size: 10pt;
+       line-height: 12pt;
      }
   
     .button {
-      width: 130px; /* Adjust button size for smaller screens */
+      width: 130px; 
     }
   
     .image2 {
-      width: 60vw; /* Adjust image width */
+      width: 60vw; 
     }
   
     .image3 {
@@ -255,7 +257,7 @@ body {
   
   @media (max-width: 480px) {
     .logo img {
-      width: 100px; /* Further reduce logo size for very small screens */
+      width: 100px; 
     }
   
     .nav-bar {
@@ -292,7 +294,7 @@ body {
       margin-right: 1em;
       width: auto; 
       margin-bottom: 10px;
-      text-align: center;/* Adjust layouts and sizes to better fit very small screens */
+      text-align: center;
     }
 
     .main-content {
@@ -303,7 +305,13 @@ body {
       margin-top: 1em;
       width: auto; 
       margin-bottom: 10px;
-      text-align: center;/* Adjust layouts and sizes to better fit very small screens */
+      text-align: center;
+    }
+
+    .main-content2 {
+      margin-top: 1em;
+      width: 60%; 
+
     }
   
 
@@ -312,14 +320,14 @@ body {
       margin-right: 1em; 
       width: 80vw;
       margin-bottom: 10px;
-      text-align: center;/* Adjust layouts and sizes to better fit very small screens */
+      text-align: center;
     }
 
     .image-container .overlay-text {
+      margin-top: 1em;
       left: 50%;
       width: 50%;
-      text-align: center
-    ; /* Adjust overlay text box for narrower screens */
+      text-align: center; 
     }
   }
   
